[FIX] plus view 수정

--- a/app/src/main/res/drawable/circle_gray.xml
+++ b/app/src/main/res/drawable/circle_gray.xml
@@ -5,5 +5,5 @@
     >
     <corners
         android:radius="30dp"/>
-    <solid android:color="@color/gray2"/>
+    <solid android:color="@color/grey2"/>
 </shape>
