--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -143,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            app:dotsColor="@color/gray2"
+            app:dotsColor="@color/grey2"
             app:selectedDotColor="@color/blue1"
             android:layout_marginTop="15dp"
             app:dotsCornerRadius="30dp"
@@ -183,7 +183,7 @@
             android:id="@+id/dots_indicator_review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:dotsColor="@color/gray2"
+            app:dotsColor="@color/grey2"
             app:selectedDotColor="@color/yellow"
             android:layout_marginTop="15dp"
             app:dotsCornerRadius="30dp"
