--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,16 +10,17 @@
     <color name="blue">#2962F6</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_grey">#9D9D9D</color>
-    <color name="grey1">#F1F1F1</color>
-    <color name="grey4">#DCDCDC</color>
     <color name="darkgrey1">#A6A6A6</color>
+    <color name="bluegray1">#f4f5f9</color>
+    <color name="grey1">#F1F1F1</color>
+    <color name="grey2">#E9E9E9</color>
+    <color name="grey4">#DCDCDC</color>
     <color name="blue1">#2962F6</color>
     <color name="blue2">#86A8FF</color>
     <color name="blue3">#86A8FF</color>
     <color name="blue4">#F1F5FF</color>
+    <color name="blue5">#DDE6FE</color>
     <color name="red1">#D95B5B</color>
     <color name="red2">#FFF5F5</color>
-    <color name="gray2">#E9E9E9</color>
     <color name="yellow">#FFEB60</color>
-    <color name="bluegray1">#f4f5f9</color>
 </resources>
