--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".View_Review.ReviewFragment1">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_reviewImg1"
@@ -17,10 +16,10 @@
         android:layout_marginBottom="10dp"
         android:src="@drawable/img_review1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_bestReview" />
+        app:layout_constraintTop_toTopOf="@id/iv_bestReview1" />
 
     <ImageView
-        android:id="@+id/iv_bestReview"
+        android:id="@+id/iv_bestReview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/tag_bestreview"
@@ -28,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -41,50 +40,50 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_cleanCount"
+        android:id="@+id/tv_cleanCount1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="14dp"
         android:fontFamily="@font/spoqa_han_sans_neo"
         android:text="세특 15회차"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_title" />
+        app:layout_constraintTop_toTopOf="@+id/tv_title1" />
 
     <TextView
-        android:id="@+id/tv_text1"
+        android:id="@+id/tv_text11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/spoqa_han_sans_neo"
         android:text="수거"
         android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        app:layout_constraintStart_toStartOf="@id/tv_title1"
+        app:layout_constraintTop_toBottomOf="@id/tv_title1" />
 
     <TextView
-        android:id="@+id/tv_text2"
+        android:id="@+id/tv_text12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/spoqa_han_sans_neo"
         android:text="배송"
         android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="@id/tv_text1"
-        app:layout_constraintTop_toBottomOf="@id/tv_text1" />
+        app:layout_constraintStart_toStartOf="@id/tv_text11"
+        app:layout_constraintTop_toBottomOf="@id/tv_text11" />
 
     <TextView
-        android:id="@+id/tv_text3"
+        android:id="@+id/tv_text13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/spoqa_han_sans_neo"
         android:text="세탁"
         android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="@id/tv_text2"
-        app:layout_constraintTop_toBottomOf="@id/tv_text2" />
+        app:layout_constraintStart_toStartOf="@id/tv_text12"
+        app:layout_constraintTop_toBottomOf="@id/tv_text12" />
 
     <RatingBar
-        android:id="@+id/rb_pickupStar"
+        android:id="@+id/rb_pickupStar1"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -95,12 +94,12 @@
         android:scaleY="0.7"
         android:stepSize="0.1"
         android:theme="@style/review_color"
-        app:layout_constraintBottom_toBottomOf="@id/tv_text1"
-        app:layout_constraintStart_toEndOf="@+id/tv_text1"
-        app:layout_constraintTop_toTopOf="@id/tv_text1" />
+        app:layout_constraintBottom_toBottomOf="@id/tv_text11"
+        app:layout_constraintStart_toEndOf="@+id/tv_text11"
+        app:layout_constraintTop_toTopOf="@id/tv_text11" />
 
     <RatingBar
-        android:id="@+id/rb_deliveryStar"
+        android:id="@+id/rb_deliveryStar1"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -111,12 +110,12 @@
         android:scaleY="0.7"
         android:stepSize="0.1"
         android:theme="@style/review_color"
-        app:layout_constraintBottom_toBottomOf="@id/tv_text2"
-        app:layout_constraintStart_toEndOf="@+id/tv_text2"
-        app:layout_constraintTop_toTopOf="@id/tv_text2" />
+        app:layout_constraintBottom_toBottomOf="@id/tv_text12"
+        app:layout_constraintStart_toEndOf="@+id/tv_text12"
+        app:layout_constraintTop_toTopOf="@id/tv_text12" />
 
     <RatingBar
-        android:id="@+id/rb_laundryStar"
+        android:id="@+id/rb_laundryStar1"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -127,23 +126,23 @@
         android:scaleY="0.7"
         android:stepSize="0.1"
         android:theme="@style/review_color"
-        app:layout_constraintBottom_toBottomOf="@id/tv_text3"
-        app:layout_constraintStart_toEndOf="@+id/tv_text3"
-        app:layout_constraintTop_toTopOf="@id/tv_text3" />
+        app:layout_constraintBottom_toBottomOf="@id/tv_text13"
+        app:layout_constraintStart_toEndOf="@+id/tv_text13"
+        app:layout_constraintTop_toTopOf="@id/tv_text13" />
 
     <TextView
-        android:id="@+id/tv_comment"
+        android:id="@+id/tv_comment1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/spoqa_han_sans_neo"
         android:text="종종 자주 이용할게요!"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/tv_text3"
-        app:layout_constraintTop_toBottomOf="@id/tv_text3" />
+        app:layout_constraintStart_toStartOf="@id/tv_text13"
+        app:layout_constraintTop_toBottomOf="@id/tv_text13" />
 
     <TextView
-        android:id="@+id/tv_bottomTitle"
+        android:id="@+id/tv_bottomTitle1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="13dp"
@@ -152,10 +151,10 @@
         android:textColor="#c4c4c4"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_reviewImg1"
-        app:layout_constraintStart_toStartOf="@id/tv_title" />
+        app:layout_constraintStart_toStartOf="@id/tv_title1" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/ll_recommend"
+        android:id="@+id/ll_recommend1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -163,13 +162,13 @@
         android:gravity="center"
         android:paddingTop="6dp"
         android:paddingBottom="6dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_bottomTitle"
-        app:layout_constraintEnd_toEndOf="@id/tv_cleanCount"
-        app:layout_constraintStart_toEndOf="@id/tv_bottomTitle"
-        app:layout_constraintTop_toTopOf="@id/tv_bottomTitle">
+        app:layout_constraintBottom_toBottomOf="@id/tv_bottomTitle1"
+        app:layout_constraintEnd_toEndOf="@id/tv_cleanCount1"
+        app:layout_constraintStart_toEndOf="@id/tv_bottomTitle1"
+        app:layout_constraintTop_toTopOf="@id/tv_bottomTitle1">
 
         <ImageView
-            android:id="@+id/iv_DdaBong"
+            android:id="@+id/iv_DdaBong1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
@@ -177,7 +176,7 @@
             android:src="@drawable/recommend_button" />
 
         <TextView
-            android:id="@+id/tv_recommendCount"
+            android:id="@+id/tv_recommendCount1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -188,5 +187,4 @@
             tools:text="99+" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
